ładne drzewko folderów lista 3

--- a/Lista3/main.html
+++ b/Lista3/main.html
@@ -32,7 +32,8 @@
             id="photo" />
 
         <h1 id="tytul">Stolica Austrii</h1>
-        <p>Największe miasto w Austrii położone w północno-wschodniej części kraju, nad Dunajem oraz miasto statutarne
+        <p>
+            Największe miasto w Austrii położone w północno-wschodniej części kraju, nad Dunajem oraz miasto statutarne
             tworzące jednocześnie odrębny kraj związkowy.
             Wiedeń jest ośrodkiem administracyjnym, przemysłowym, handlowo-usługowym, akademickim, turystycznym i
             kulturalnym o znaczeniu międzynarodowym.
@@ -41,7 +42,25 @@
             stowarzyszeń, organizacji i uczelni. Vienna International Centre jest jednym z czterech kompleksów, w
             których ulokowane są instytucje Organizacji Narodów Zjednoczonych.
             Swoje siedziby w Wiedniu mają również, MAEA, OBWE oraz OPEC. W skali kraju miasto stanowi najważniejszy
-            węzeł drogowy i kolejowy oraz lotniczy.</p>
+            węzeł drogowy i kolejowy oraz lotniczy.
+        </p>
+
+        <div class="media-container">
+            <div class="media-items">
+                <div class="media-item">
+                    <img src="" alt="">
+                </div>
+                <div class="media-item">
+                    <img src="" alt="">
+                </div>
+                <div class="media-item">
+                    <img src="" alt="">
+                </div>
+                <div class="media-item">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
