--- a/Lista3/main.html
+++ b/Lista3/main.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="scss/main.css" />
+    <link rel="stylesheet" href="scss/styles.css" />
     <title>Wiedeń</title>
 </head>
 
@@ -48,16 +48,16 @@
         <div class="media-container">
             <div class="media-items">
                 <div class="media-item">
-                    <img src="" alt="">
+                    <img src="https://media.timeout.com/images/105970778/380/285/image.jpg" alt="">
                 </div>
                 <div class="media-item">
-                    <img src="" alt="">
+                    <img src="https://media.timeout.com/images/105315974/380/285/image.jpg" alt="">
                 </div>
                 <div class="media-item">
-                    <img src="" alt="">
+                    <img src="https://media.timeout.com/images/105315961/380/285/image.jpg" alt="">
                 </div>
                 <div class="media-item">
-                    <img src="" alt="">
+                    <img src="https://media.timeout.com/images/105315964/380/285/image.jpg" alt="">
                 </div>
             </div>
         </div>
