flex conatiner for photos

--- a/Lista3/main.html
+++ b/Lista3/main.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="container">
-
+        <div class="spacer"></div>
 
         <img src="https://cdn-blob.austria.info/cms-uploads-prod/default/0001/06/thumb_5291_default_header_big.jpeg"
             id="photo" />
@@ -44,24 +44,16 @@
             Swoje siedziby w Wiedniu mają również, MAEA, OBWE oraz OPEC. W skali kraju miasto stanowi najważniejszy
             węzeł drogowy i kolejowy oraz lotniczy.
         </p>
-
+        <div class="spacer"></div>
+        <h1>Popular attractions</h2><br/>
         <div class="media-container">
-            <div class="media-items">
-                <div class="media-item">
-                    <img src="https://media.timeout.com/images/105970778/380/285/image.jpg" alt="">
-                </div>
-                <div class="media-item">
-                    <img src="https://media.timeout.com/images/105315974/380/285/image.jpg" alt="">
-                </div>
-                <div class="media-item">
-                    <img src="https://media.timeout.com/images/105315961/380/285/image.jpg" alt="">
-                </div>
-                <div class="media-item">
-                    <img src="https://media.timeout.com/images/105315964/380/285/image.jpg" alt="">
-                </div>
-            </div>
+            <img src="https://media.timeout.com/images/105970778/380/285/image.jpg" alt="">
+            <img src="https://media.timeout.com/images/105315974/380/285/image.jpg" alt="">
+            <img src="https://media.timeout.com/images/105315961/380/285/image.jpg" alt="">
+            <img src="https://media.timeout.com/images/105315964/380/285/image.jpg" alt="">
         </div>
     </div>
+    <div class="spacer"> </div>
 </body>
 
 </html>
