--- a/Lista3/main.html
+++ b/Lista3/main.html
@@ -15,10 +15,10 @@
             <nav>
                 <ul>
 
-                    <li><a class="logo" href="#">Wiedeń</a></li>
-                    <li class="navbar-right"><a href="#">Kultura</a></li>
-                    <li class="navbar-right"><a href="#">Historia</a></li>
-                    <li class="navbar-right"><a href="#">Atrakcje</a></li>
+                    <li class="logo"><a  href="#" class="defaultButton">Vienna</a></li>
+                    <li class="navbar-right"><a href="#" class="defaultButton">Culture</a></li>
+                    <li class="navbar-right"><a href="#" class="defaultButton">History</a></li>
+                    <li class="navbar-right"><a href="#" class="defaultButton">Attractions</a></li>
 
                 </ul>
             </nav>
@@ -31,32 +31,32 @@
         <img src="https://cdn-blob.austria.info/cms-uploads-prod/default/0001/06/thumb_5291_default_header_big.jpeg"
             id="photo" />
 
-        <h1 id="tytul">Stolica Austrii</h1>
+        <h1 id="tytul">The capital of Austria</h1>
         <p>
-            Największe miasto w Austrii położone w północno-wschodniej części kraju, nad Dunajem oraz miasto statutarne
-            tworzące jednocześnie odrębny kraj związkowy.
-            Wiedeń jest ośrodkiem administracyjnym, przemysłowym, handlowo-usługowym, akademickim, turystycznym i
-            kulturalnym o znaczeniu międzynarodowym.
-            Jest siedzibą austriackich urzędów centralnych (w tym parlamentu, prezydenta i rządu), związków wyznaniowych
-            działających na terenie Austrii, a także licznych przedsiębiorstw,
-            stowarzyszeń, organizacji i uczelni. Vienna International Centre jest jednym z czterech kompleksów, w
-            których ulokowane są instytucje Organizacji Narodów Zjednoczonych.
-            Swoje siedziby w Wiedniu mają również, MAEA, OBWE oraz OPEC. W skali kraju miasto stanowi najważniejszy
-            węzeł drogowy i kolejowy oraz lotniczy.
+            Vienna is the capital, largest city, and one of nine states of Austria. Vienna is Austria's most populous city and its primate city, with about two million inhabitants
+            (2.9 million within the metropolitan area, nearly one third of the country's population), 
+            and its cultural, economic, and political center. It is the 5th-largest city proper by population in the European Union and the largest of all cities on the Danube river.
+            Until the beginning of the 20th century, Vienna was the largest German-speaking city in the world, and before the splitting of the Austro-Hungarian Empire in World War I, 
+            the city had two million inhabitants.Today, it is the second-largest German-speaking city after Berlin.
+             Vienna is host to many major international organizations, including the United Nations, OPEC and the OSCE.
         </p>
 
         <div class="media-container">
             <div class="media-items">
                 <div class="media-item">
+                    <p>The Belvedere Palace</p>
                     <img src="https://media.timeout.com/images/105970778/380/285/image.jpg" alt="">
                 </div>
                 <div class="media-item">
+                    <p>The Hofburg Palace</p>
                     <img src="https://media.timeout.com/images/105315974/380/285/image.jpg" alt="">
                 </div>
                 <div class="media-item">
+                    <p>St. Stephen’s Cathedral</p>
                     <img src="https://media.timeout.com/images/105315961/380/285/image.jpg" alt="">
                 </div>
                 <div class="media-item">
+                    <p>The Sigmund Freud Museum</p>
                     <img src="https://media.timeout.com/images/105315964/380/285/image.jpg" alt="">
                 </div>
             </div>
