--- a/Lista3/main.html
+++ b/Lista3/main.html
@@ -45,7 +45,7 @@
             węzeł drogowy i kolejowy oraz lotniczy.
         </p>
         <div class="spacer"></div>
-        <h1>Popular attractions</h2><br/>
+        <h1>Popular attractions</h2>
         <div class="media-container">
             <img src="https://media.timeout.com/images/105970778/380/285/image.jpg" alt="">
             <img src="https://media.timeout.com/images/105315974/380/285/image.jpg" alt="">
@@ -53,7 +53,7 @@
             <img src="https://media.timeout.com/images/105315964/380/285/image.jpg" alt="">
         </div>
     </div>
-    <div class="spacer"> </div>
+    <div class="spacer"> <div class="spacer"></div> </div>
 </body>
 
 </html>
