--- a/Lista3/main.html
+++ b/Lista3/main.html
@@ -63,10 +63,10 @@
                         <div class="text">St. Stephen’s Cathedral </div>
                     </div>
                 </div>
-                <!-- <div class="cont">
-                            <img src="https://media.timeout.com/images/105315964/380/285/image.jpg" alt="" >
-                            <div class="middle">The Sigmund Freud Museum</div>
-                        </div> -->
+                <div class="cont">
+                            <img src="https://media.timeout.com/images/105315964/380/285/image.jpg" alt="" class="image">
+                            <div class="middle"><div class="text">The Sigmund Freud Museum</div></div>
+                </div>
 
             </div>
 
