--- a/Lista3/main.html
+++ b/Lista3/main.html
@@ -24,6 +24,8 @@
             </nav>
         </div>
     </div>
+    <div class="spacer"></div>
+
 
     <div class="container">
 
@@ -31,7 +33,7 @@
             id="photo" />
 
         <h1 id="tytul">The capital of Austria</h1>
-        <p>
+        <p id="opis">
             Vienna is the capital, largest city, and one of nine states of Austria. Vienna is Austria's most populous
             city and its primate city, with about two million inhabitants
             (2.9 million within the metropolitan area, nearly one third of the country's population),
@@ -46,9 +48,9 @@
         <h1>Popular attractions</h2>
             <div class="media-container">
                 <div class="cont">
-                    <img src="https://media.timeout.com/images/105970778/380/285/image.jpg" alt="" class="image">
+                    <img src="https://media.timeout.com/images/105315973/380/285/image.jpg" alt="" class="image">
                     <div class="middle">
-                        <div class="text"> Belvedere Palace </div>
+                        <div class="text"> Wiener Riesenrad </div>
                     </div>
                 </div>
                 <div class="cont">
@@ -69,6 +71,36 @@
                 </div>
 
             </div>
+
+            <div class="spacer"></div>
+        </br>
+        <h1>Culture events</h2>
+            <div class="media-container">
+                <div class="cont">
+                    <img src="https://wieden.wyjazdy.travel/data/pliki/Austria/Wieden/opera-teatr/1wiedenska-opera-narodowa-680x428.jpg" alt="" class="image">
+                    <div class="middle">
+                        <div class="text"> Vienna State Opera </div>
+                    </div>
+                </div>
+                <div class="cont">
+                    <img src="https://www.srs.at/fileadmin/_processed_/1/0/csm__Quadrille_v_Oben_2___c__Rene_van_Bakel_edit_03_55eeaeaf32.jpg" alt="" class="image">
+                    <div class="middle">
+                        <div class="text">Spanish Riding School </div>
+                    </div>
+                </div>
+                <div class="cont">
+                    <img src="https://media.timeout.com/images/105970778/380/285/image.jpg" alt="" class="image">
+                    <div class="middle">
+                        <div class="text">Belvedere Palace </div>
+                    </div>
+                </div>
+                <div class="cont">
+                            <img src="https://media.timeout.com/images/105315962/380/285/image.jpg" alt="" class="image">
+                            <div class="middle"><div class="text">Supersense</div></div>
+                </div>
+
+            </div>
+
 
 
 
