--- a/Lista4/index.html
+++ b/Lista4/index.html
@@ -83,8 +83,8 @@
                             <div class="card">
                                 <div class="card-body">
 
-                                    <img src="https://cdn-blob.austria.info/cms-uploads-prod/default/0001/06/thumb_5291_default_header_big.jpeg" alt=""
-                                        class="image">
+                                    <img src="https://cdn-blob.austria.info/cms-uploads-prod/default/0001/06/thumb_5291_default_header_big.jpeg"
+                                        alt="" class="image">
                                     <div class="card-text">
                                         Wiener Riesenrad
                                     </div>
@@ -129,12 +129,12 @@
                     <a class="carousel-control-prev" href="#demo" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
-                      </a>
-                      <a class="carousel-control-next" href="#demo" role="button" data-slide="next">
+                    </a>
+                    <a class="carousel-control-next" href="#demo" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
-                      </a>
-                   
+                    </a>
+
                 </div>
 
         </div>
@@ -179,8 +179,127 @@
 
 
             </div>
+
+            <section class="chart">
+                <div class="container d-flex justify-content-center">
+
+                    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+
+
+                    <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
+                    <script>
+                        var xValues = ["Belvedere Palace", "Supersense", "Spanish Riding School", "Wiener Riesenrad"];
+                        var yValues = [55, 21, 14, 10];
+                        var barColors = [
+                            "#b91d47",
+                            "#9cac0d",
+                            "#0d9cac",
+                            "#ac0d9c",
+                        ];
+
+                        new Chart("myChart", {
+                            type: "doughnut",
+                            data: {
+                                labels: xValues,
+                                datasets: [{
+                                    backgroundColor: barColors,
+                                    data: yValues
+                                }]
+                            },
+                            options: {
+                                title: {
+                                    display: true,
+                                    text: "THE MOST VISITED"
+                                }
+                            }
+                        });
+                    </script>
+
+                </div>
+            </section>
+
+
+            <section id="quote">
+                <div class="container py-5 h-100">
+                    <div class="row d-flex justify-content-center">
+                        <div class="col col-lg-20 col-xl-6">
+                            <div class="card" style="border-radius: 10px;">
+                                <div class="card-body ">
+                                    <blockquote class="blockquote">
+                                        <span class="lead font-italic">Vienna is a handsome, lively city, and pleases me
+                                            exceedingly.</span>
+                                    </blockquote>
+                                    <figcaption class="blockquote-footer">
+                                        Frederic Chopin
+                                    </figcaption>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
     </main>
 
+    <footer>
+        <section id="contact" style="background-color: #eee;">
+
+            </br>
+            <div class="row">
+                <h2 class="text-center mb-4">ASK THE QUESTION</h2>
+            </div>
+            <div class="container d-flex justify-content-center">
+                <div class="row ">
+                    <form>
+                        <div class="row mb-4">
+                            <div class="col-md-6">
+                                <label class="form-label text-center mb-4">Name</label>
+                                <input type="text" class="form-control" />
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label text-center mb-4">Surname</label>
+                                <input type="text" class="form-control" />
+
+                            </div>
+                        </div>
+                        <div class="row mb-4">
+                            <div class="col-md-6">
+                                <label class="form-label text-center mb-4">Email</label>
+                                <input type="email" class="form-control" />
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label text-center mb-4">Phone number</label>
+                                <input type="email" class="form-control" />
+                            </div>
+                        </div>
+                        <div class="row mb-4">
+
+                            <label class="form-label">Question</label>
+                            <textarea class="form-control" rows="4"></textarea>
+                        </div>
+                        </br>
+                        <div class="d-flex justify-content-center">
+                            <button type="button" class="btn bg-dark text-white mb-4 center">Send</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+
+
+
+    </footer>
+    </br>
+    <section id="map">
+        <div class="row">
+            <h2 class="text-center mb-4">FIND US</h2>
+        </div>
+        <div class="d-flex justify-content-center">
+            <iframe
+                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France"
+                width="600" height="450" frameborder="0" style="border:0"></iframe>
+        </div>
+    </section>
 
 
     <!-- jQuery -->
