--- a/Lista4/index.html
+++ b/Lista4/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/mdb.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+
 </head>
 
 <body>
@@ -88,9 +93,9 @@
                         <button type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide-to="1"
                             aria-label="Slide 2"></button>
                         <button type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide-to="2"
-                                aria-label="Slide 3"></button>
-                            <button type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide-to="3"
-                                aria-label="Slide 4"></button>
+                            aria-label="Slide 3"></button>
+                        <button type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide-to="3"
+                            aria-label="Slide 4"></button>
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active ">
@@ -235,68 +240,84 @@
         </div>
 
 
-            <section class="chart">
-                <div class="container d-flex justify-content-center">
-
-                    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 
 
-                    <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
-                    <script>
-                        var xValues = ["Belvedere Palace", "Supersense", "Spanish Riding School", "Wiener Riesenrad"];
-                        var yValues = [55, 21, 14, 10];
-                        var barColors = [
-                            "#b91d47",
-                            "#9cac0d",
-                            "#0d9cac",
-                            "#ac0d9c",
-                        ];
+        <section class="chart">
+            <div class="container d-flex justify-content-center">
 
-                        new Chart("myChart", {
-                            type: "doughnut",
-                            data: {
-                                labels: xValues,
-                                datasets: [{
-                                    backgroundColor: barColors,
-                                    data: yValues
-                                }]
-                            },
-                            options: {
-                                title: {
-                                    display: true,
-                                    text: "THE MOST VISITED"
-                                }
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+
+
+                <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
+                <script>
+                    var xValues = ["Belvedere Palace", "Supersense", "Spanish Riding School", "Wiener Riesenrad"];
+                    var yValues = [55, 21, 14, 10];
+                    var barColors = [
+                        "#b91d47",
+                        "#9cac0d",
+                        "#0d9cac",
+                        "#ac0d9c",
+                    ];
+
+                    new Chart("myChart", {
+                        type: "doughnut",
+                        data: {
+                            labels: xValues,
+                            datasets: [{
+                                backgroundColor: barColors,
+                                data: yValues
+                            }]
+                        },
+                        options: {
+                            title: {
+                                display: true,
+                                text: "THE MOST VISITED"
                             }
-                        });
-                    </script>
+                        }
+                    });
+                </script>
 
-                </div>
-            </section>
+            </div>
+        </section>
 
 
-            <section id="quote">
-                <div class="container py-5 h-100">
-                    <div class="row d-flex justify-content-center">
-                        <div class="col col-lg-20 col-xl-6">
-                            <div class="card" style="border-radius: 10px;">
-                                <div class="card-body ">
-                                    <blockquote class="blockquote">
-                                        <span class="lead font-italic">Vienna is a handsome, lively city, and pleases me
-                                            exceedingly.</span>
-                                    </blockquote>
-                                    <figcaption class="blockquote-footer">
-                                        Frederic Chopin
-                                    </figcaption>
-                                </div>
+        <section id="quote">
+            <div class="container py-5 h-100">
+                <div class="row d-flex justify-content-center">
+                    <div class="col col-lg-20 col-xl-6">
+                        <div class="card" style="border-radius: 10px;">
+                            <div class="card-body ">
+                                <blockquote class="blockquote">
+                                    <span class="lead font-italic">Vienna is a handsome, lively city, and pleases me
+                                        exceedingly.</span>
+                                </blockquote>
+                                <figcaption class="blockquote-footer">
+                                    Frederic Chopin
+                                </figcaption>
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
+        </section>
 
     </main>
 
-    <footer>
+
+
+
+    <section id="contact-phone">
+        <button class="btn " type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+            aria-expanded="false" aria-controls="collapseExample">
+            <i class="bi bi-whatsapp"></i> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+                <path
+                    d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z" />
+            </svg> </button>
+
+    </section>
+    <div class="collapse" id="collapseExample">
+
         <section id="contact" style="background-color: #eee;">
 
             </br>
@@ -340,10 +361,11 @@
                 </div>
             </div>
         </section>
+    </div>
+    
 
 
 
-    </footer>
     </br>
     <section id="map">
         <div class="row">
@@ -357,6 +379,8 @@
     </section>
 
 
+
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <!-- jQuery -->
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
