--- a/Lista4/index.html
+++ b/Lista4/index.html
@@ -82,7 +82,7 @@
             </section>
 
 
-            <section id="carousel-section" >
+            <section id="carousel-section">
                 <h1 class="mt-5">Popular attractions and Culture events</h1>
 
                 <div class="container-fluid">
@@ -94,9 +94,9 @@
                             <button type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide-to="1"
                                 aria-label="Slide 2"></button>
                             <button type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide-to="2"
-                            aria-label="Slide 3"></button>
-                        <button type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide-to="3"
-                            aria-label="Slide 4"></button>
+                                aria-label="Slide 3"></button>
+                            <button type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide-to="3"
+                                aria-label="Slide 4"></button>
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active ">
@@ -307,63 +307,8 @@
 
 
 
-    <section id="contact-phone">
-        <button class="btn " type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
-            aria-expanded="false" aria-controls="collapseExample">
-            <i class="bi bi-whatsapp"></i> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
-                <path
-                    d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z" />
-            </svg> </button>
 
-    </section>
-    <div class="collapse" id="collapseExample">
 
-        <section id="contact" style="background-color: #eee;">
-
-            </br>
-            <div class="row">
-                <h2 class="text-center mb-4">ASK THE QUESTION</h2>
-            </div>
-            <div class="container d-flex justify-content-center">
-                <div class="row ">
-                    <form>
-                        <div class="row mb-4">
-                            <div class="col-md-6">
-                                <label class="form-label text-center mb-4">Name</label>
-                                <input type="text" class="form-control" />
-                            </div>
-                            <div class="col-md-6">
-                                <label class="form-label text-center mb-4">Surname</label>
-                                <input type="text" class="form-control" />
-
-                            </div>
-                        </div>
-                        <div class="row mb-4">
-                            <div class="col-md-6">
-                                <label class="form-label text-center mb-4">Email</label>
-                                <input type="email" class="form-control" />
-                            </div>
-                            <div class="col-md-6">
-                                <label class="form-label text-center mb-4">Phone number</label>
-                                <input type="email" class="form-control" />
-                            </div>
-                        </div>
-                        <div class="row mb-4">
-
-                            <label class="form-label">Question</label>
-                            <textarea class="form-control" rows="4"></textarea>
-                        </div>
-                        </br>
-                        <div class="d-flex justify-content-center">
-                            <button type="button" class="btn bg-dark text-white mb-4 center">Send</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </section>
-    </div>
-    
 
 
 
@@ -378,6 +323,128 @@
                 width="600" height="450" frameborder="0" style="border:0"></iframe>
         </div>
     </section>
+
+    <footer class="bg-dark">
+        <div class="container mt-5">
+            <h1 class="text-white">FAQ</h1>
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item py-0">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <p>Question</p>
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda vitae, incidunt earum
+                                odio exercitationem enim! Eveniet et suscipit consequatur incidunt nihil porro nulla
+                                modi exercitationem labore placeat aspernatur quaerat id cumque similique, veniam non
+                                esse vitae quidem quod voluptatibus adipisci sint odit, impedit rerum! Nobis in
+                                recusandae eos corporis iste.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            <p>Question</p>
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda vitae, incidunt earum
+                                odio exercitationem enim! Eveniet et suscipit consequatur incidunt nihil porro nulla
+                                modi exercitationem labore placeat aspernatur quaerat id cumque similique, veniam non
+                                esse vitae quidem quod voluptatibus adipisci sint odit, impedit rerum! Nobis in
+                                recusandae eos corporis iste.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            <p>Question</p>
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda vitae, incidunt earum
+                                odio exercitationem enim! Eveniet et suscipit consequatur incidunt nihil porro nulla
+                                modi exercitationem labore placeat aspernatur quaerat id cumque similique, veniam non
+                                esse vitae quidem quod voluptatibus adipisci sint odit, impedit rerum! Nobis in
+                                recusandae eos corporis iste.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="d-flex mt-4">
+                <h3 class="text-white">You got more questions? Click here: </h3>
+                <section id="contact-phone">
+                    <button class="btn btn-light " type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                        <i class="bi bi-whatsapp"></i> <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                            fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+                            <path
+                                d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z" />
+                        </svg> </button>
+
+                </section>
+            </div>
+            <div class="collapse" id="collapseExample">
+
+                <section id="contact" style="background-color: #eee;">
+
+                    </br>
+                    <div class="row">
+                        <h2 class="text-center mb-4">ASK THE QUESTION</h2>
+                    </div>
+                    <div class="container d-flex justify-content-center">
+                        <div class="row ">
+                            <form>
+                                <div class="row mb-4">
+                                    <div class="col-md-6">
+                                        <label class="form-label text-center mb-4">Name</label>
+                                        <input type="text" class="form-control" />
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label class="form-label text-center mb-4">Surname</label>
+                                        <input type="text" class="form-control" />
+
+                                    </div>
+                                </div>
+                                <div class="row mb-4">
+                                    <div class="col-md-6">
+                                        <label class="form-label text-center mb-4">Email</label>
+                                        <input type="email" class="form-control" />
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label class="form-label text-center mb-4">Phone number</label>
+                                        <input type="email" class="form-control" />
+                                    </div>
+                                </div>
+                                <div class="row mb-4">
+
+                                    <label class="form-label">Question</label>
+                                    <textarea class="form-control" rows="4"></textarea>
+                                </div>
+                                </br>
+                                <div class="d-flex justify-content-center">
+                                    <button type="button" class="btn bg-dark text-white mb-4 center">Send</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </footer>
 
 
 
