--- a/Lista8/src/index.html
+++ b/Lista8/src/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Socket.IO chat</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
     <style>
         body {
             margin: 0;
@@ -10,7 +12,7 @@
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
         }
 
-        #form {
+        .box {
             background: rgba(0, 0, 0, 0.15);
             padding: 0.25rem;
             position: fixed;
@@ -21,21 +23,32 @@
             height: 3rem;
             box-sizing: border-box;
             backdrop-filter: blur(10px);
+            width: 100%;
         }
 
-        #input {
+        #form {
+            display: flex;
+            width: 100%;
+
+        }
+
+        #input,  #input-image  {
             border: none;
             padding: 0 1rem;
             flex-grow: 1;
             border-radius: 2rem;
             margin: 0.25rem;
+            width: 100%;
+
         }
+
+       
 
         #input:focus {
             outline: none;
         }
 
-        #form>button {
+        #form>button, #image-form>button {
             background: #333;
             border: none;
             padding: 0 1rem;
@@ -91,19 +104,35 @@
             height: auto;
             max-width: 100%;
         }
+        #image-form {
+			display: none;
+            background: rgba(0, 0, 0, 0.15);
+            padding: 0.25rem;
+            position: fixed;
+            bottom: 3rem;
+            left: 0;
+            right: 0;
+            height: 3rem;
+            box-sizing: border-box;
+            backdrop-filter: blur(10px);
+            width: 100%;
+		}
     </style>
 </head>
 
 <body>
     <ul id="messages"></ul>
     <div id="typing-indicator"></div>
-    <form id="form" action="">
-        <input id="input" autocomplete="off" />
-        <!-- <button><img src="../imgs/pngegg.png" id="input-image" type="file"width="20px" height="20px" onchange="upload(this.files)"/></button> -->
-        <button>Send</button>
-    </form>
+    <div class="box">
+        <button onclick="showForm()"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjBfiZAmZjprxTdDIBBZmN75uUyqDdAj3YLQ&usqp=CAU" width="30px" height="30px" /></button>
+        <form id="form" action="">
+            <input id="input" autocomplete="off" />
+
+            <button>Send</button>
+        </form>
+    </div>
     <form id="image-form" action="">
-        <input id="input-image" type="file" accept="image/*" /><button>Send</button>
+        <input id="input-image" class="form-control" type="file" accept="image/*" /><button>Send</button>
     </form>
     <script src="/socket.io/socket.io.js"></script>
     <script>
@@ -135,12 +164,25 @@
             }
         });
 
+        var isShown = false;
+
+        function showForm(){
+            if(isShown){
+                document.getElementById('image-form').style.display = 'none';
+            } else {
+                document.getElementById('image-form').style.display = 'flex';
+            }
+            isShown = !isShown;
+            
+        }
+
+
         socket.on("chat_message", function (data) {
             addChatMessage(data);
         });
 
         socket.on("photo_message", function (data) {
-            const newData = {message: new Blob([data.message]), username: data.username, date: data.date};
+            const newData = { message: new Blob([data.message]), username: data.username, date: data.date };
             addPhotoMessage(newData);
         });
 
@@ -209,7 +251,7 @@
             li.classList.add(author);
             console.log("dsdfs")
             const imageSource = URL.createObjectURL(data.message);
-            div.innerHTML = data.username + "<div class=\"chat-bubble " + author + "\">" + "<img src=\""+ imageSource+"\">" + "</div>" + data.date;
+            div.innerHTML = data.username + "<div class=\"chat-bubble " + author + "\">" + "<img src=\"" + imageSource + "\">" + "</div>" + data.date;
             li.appendChild(div);
             messages.appendChild(li);
             window.scrollTo(0, document.body.scrollHeight);
@@ -221,6 +263,8 @@
             });
         }
     </script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 
 </html>
